namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prison-roll-count-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prison-roll-count-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "move-a-prisoner-digital"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Prison Roll Count Service"
    cloud-platform.justice.gov.uk/owner: "moveaprisoner@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prison-roll-count.git"
    cloud-platform.justice.gov.uk/team-name: "Move a Prisoner"
